force-app/main/default/objects/Patient_Statement__c/Patient_Statement__c.object-meta.xml
<CustomObject>
    <label>Patient Statement</label>
    <nameField>
        <displayFormat>BILL-{0000}</displayFormat>
        <label>Patient Bill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Statement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>