force-app/main/default/objects/Patient_Statement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Statement</relationshipLabel>
    <relationshipName>Patient_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>