force-app/main/default/objects/Patient_Statement__c/fields/Amount_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allowed__c</fullName>
    <label>Amount Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>