force-app/main/default/objects/Patient_Statement__c/fields/Amount_We_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_We_Paid__c</fullName>
    <label>Amount We Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>