force-app/main/default/objects/Patient_Statement__c/fields/CoPaymentCoInsurance__c.field-meta.xml
<CustomField>
    <fullName>CoPaymentCoInsurance__c</fullName>
    <label>Co-Payment/Co-Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>