force-app/main/default/objects/Patient_Statement__c/fields/EOB__c.field-meta.xml
<CustomField>
    <fullName>EOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOB</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipName>Patient_Bill</relationshipName>
    <type>Lookup</type>
</CustomField>