force-app/main/default/objects/Patient_Statement__c/fields/InvokeProcess__c.field-meta.xml
<CustomField>
    <fullName>InvokeProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvokeProcess</label>
    <type>Checkbox</type>
</CustomField>