force-app/main/default/objects/Patient_Statement__c/fields/NewBalance__c.field-meta.xml
<CustomField>
    <fullName>NewBalance__c</fullName>
    <label>NewBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>