force-app/main/default/objects/Patient_Statement__c/fields/NewCharges__c.field-meta.xml
<CustomField>
    <fullName>NewCharges__c</fullName>
    <label>NewCharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>