force-app/main/default/objects/Patient_Statement__c/fields/Non_Covered__c.field-meta.xml
<CustomField>
    <fullName>Non_Covered__c</fullName>
    <label>Non Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>