force-app/main/default/objects/Patient_Statement__c/fields/Patient_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Code__c</fullName>
    <label>Patient Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>