force-app/main/default/objects/Patient_Statement__c/fields/PaymentsAdjustments_Received__c.field-meta.xml
<CustomField>
    <fullName>PaymentsAdjustments_Received__c</fullName>
    <label>Payments/Adjustments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>