force-app/main/default/objects/Patient_Statement__c/fields/PaymentsAndAdjustmnts__c.field-meta.xml
<CustomField>
    <fullName>PaymentsAndAdjustmnts__c</fullName>
    <label>PaymentsAndAdjustmnts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>