force-app/main/default/objects/Patient_Statement__c/fields/PaymntTransIds__c.field-meta.xml
<CustomField>
    <fullName>PaymntTransIds__c</fullName>
    <label>PaymntTransIds</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>