force-app/main/default/objects/Patient_Statement__c/fields/PreviousBalance__c.field-meta.xml
<CustomField>
    <fullName>PreviousBalance__c</fullName>
    <label>PreviousBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>