force-app/main/default/objects/Patient_Statement__c/fields/Procedure_Number__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Number__c</fullName>
    <label>Procedure Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>