force-app/main/default/objects/Patient_Statement__c/fields/Statement_from__c.field-meta.xml
<CustomField>
    <fullName>Statement_from__c</fullName>
    <label>Statement from</label>
    <type>DateTime</type>
</CustomField>