force-app/main/default/objects/Patient_Statement__c/fields/Statement_to__c.field-meta.xml
<CustomField>
    <fullName>Statement_to__c</fullName>
    <label>Statement to</label>
    <type>DateTime</type>
</CustomField>