force-app/main/default/objects/Patient_Statement__c/fields/Type_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service__c</fullName>
    <label>Type Of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Office Medical</fullName>
            </value>
            <value>
                <fullName>OPD</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Pharmacy and Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>